removed height from nav-div when min width of screen is 834px, updated height when min width is 834px and max height is 666px to 653 px, then updated row-gap and margins to ensure that the content remains in place until height reaches 667px

--- a/Instagram-HTML-CSS-Practice/Feed-page/style/nav.css
+++ b/Instagram-HTML-CSS-Practice/Feed-page/style/nav.css
@@ -94,9 +94,9 @@
   margin-right: 17px;
 }
 
-@media (min-width: 834px) and (max-height: 635px) {
+@media (min-width: 834px) and (max-height: 666px) {
   .nav-div {
-    height: 646px;
+    height: 653px;
   }
 }
 
@@ -107,7 +107,6 @@
     bottom: 0;
     top: 0;
     width: 80px;
-    height: 100%;
     /*background-color: black;*/
     background-color: red;
     display: flex;
@@ -129,21 +128,21 @@
     flex-direction: column;
     align-items: center;
     /*justify-content: space-around;*/
-    row-gap: 36px;
+    row-gap: 32px;
     height: 600px;
-    margin-top: 18px;
-    margin-bottom: 22px;
+    margin-top: 16px;
+    margin-bottom: 0px;
   }
   .large-nav-bottom-div {
     opacity: 1;
     display: block;
     margin-top: auto;
-    margin-bottom: 52px;
+    margin-bottom: 60px;
   }
   .instagram-icon-div {
     opacity: 1;
     display: block;
-    margin-bottom: 27px;
+    margin-bottom: 29px;
   }
   .icon-div {
     background-color: green;
